[project]
name = "flpc"
version = "0.2.5"
description = "A Lightning Fast ⚡ Rust-based regex crate wrapper for Python3 to get faster performance. 👾"
maintainers = [{ name = "Adarsh Gourab Mahalik", email = "gourabmahalikadarsh@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
   "Programming Language :: Rust",
   "Programming Language :: Python :: Implementation :: CPython",
   "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/itsmeadarsh2008/flpc"
Repository = "https://github.com/itsmeadarsh2008/flpc.git"
"Bug Tracker" = "https://github.com/itsmeadarsh2008/flpc/issues"

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
addopts = [
  "--capture=sys",  # capture sysout messages
  "--strict-markers",
  "--tb=short",  # traceback
]

python_files = "*.py"
testpaths = [ "tests" ]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
]

[build-system]
requires = ["maturin>=1.6,<2.0"]
build-backend = "maturin"
